Fix padding on narrows screens

--- a/src/css/dgu-drupal.less
+++ b/src/css/dgu-drupal.less
@@ -286,7 +286,7 @@ html.js input.form-autocomplete {
     padding: 12px 220px 10px 90px;
     @media (max-width: 768px) {
       margin-bottom: 0;
-      padding: 10 0 0 90px;
+      padding-right: 10px;
     }
     .new {
       position: absolute;
